--- a/SmartOrderManager/mainwindow.ui
+++ b/SmartOrderManager/mainwindow.ui
@@ -18,6 +18,30 @@
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QGridLayout" name="gridLayout">
+    <item row="1" column="0">
+     <widget class="QLabel" name="label_erreur">
+      <property name="text">
+       <string>ce texte va servir pour les erreurs </string>
+      </property>
+     </widget>
+    </item>
+    <item row="2" column="0">
+     <widget class="QLineEdit" name="lineEdit_pseudo">
+      <property name="styleSheet">
+       <string notr="true">background-color: rgb(255, 255, 255);</string>
+      </property>
+      <property name="text">
+       <string/>
+      </property>
+     </widget>
+    </item>
+    <item row="4" column="0">
+     <widget class="QPushButton" name="pushButton">
+      <property name="text">
+       <string>Entrer</string>
+      </property>
+     </widget>
+    </item>
     <item row="0" column="0">
      <widget class="QLabel" name="Label_connexion">
       <property name="mouseTracking">
@@ -29,34 +53,17 @@ font: 700 9pt &quot;Times New Roman&quot;;
 font: 22pt &quot;Segoe UI&quot;;</string>
       </property>
       <property name="text">
-       <string>Connectez vous </string>
+       <string>Veuillez vous connecter</string>
       </property>
       <property name="alignment">
        <set>Qt::AlignCenter</set>
       </property>
      </widget>
     </item>
-    <item row="2" column="0">
-     <widget class="QLineEdit" name="lineEdit">
+    <item row="3" column="0">
+     <widget class="QLineEdit" name="lineEdit_mdp">
       <property name="styleSheet">
        <string notr="true">background-color: rgb(255, 255, 255);</string>
-      </property>
-      <property name="text">
-       <string/>
-      </property>
-     </widget>
-    </item>
-    <item row="3" column="0">
-     <widget class="QPushButton" name="pushButton">
-      <property name="text">
-       <string>Entrer</string>
-      </property>
-     </widget>
-    </item>
-    <item row="1" column="0">
-     <widget class="QLabel" name="label_erreur">
-      <property name="text">
-       <string>ce texte va servir pour les erreurs </string>
       </property>
      </widget>
     </item>
