--- a/SmartOrderManager/chauffeur_interface.ui
+++ b/SmartOrderManager/chauffeur_interface.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>chauffeur_interface</class>
- <widget class="QDialog" name="chauffeur_interface">
+ <class>Chauffeur_interface</class>
+ <widget class="QDialog" name="Chauffeur_interface">
   <property name="geometry">
    <rect>
     <x>0</x>
